Fix `invisible` CSS class

--- a/app/assets/stylesheets/components.scss
+++ b/app/assets/stylesheets/components.scss
@@ -63,6 +63,8 @@
 .invisible {
   font-size: 0;
   line-height: 0;
+  display: inline-block;
+  width: 0;
 }
 
 .ellipsis {
